--- a/Proposal.html
+++ b/Proposal.html
@@ -3,22 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Are you the beautiful lady in picture above</title>
+    <title>will you be my valentine?</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <!-- Gif -->
-        <img src="assets/images/Mahlako.jpeg" id="Picture" alt="A pictur of Mahlako">
+        <img src="assets/images/Proposal.png" id="Picture" alt="a picture of me proposing"/>
         <!-- Question -->
         <h1 id="message">
-        Are you the beautiful lady in picture above? (˶ᵔ ᵕ ᵔ˶)
+        Mahlako Mogano will you be my Valentine? (˶ᵔ ᵕ ᵔ˶)
         </h1>
     </div>
         <!-- Buttons -->
         <div class="btn-container">
-            <button id="yes-btn"  onclick="window.location.href='Proposal.html'">Yes</button>
-            <button id="no-btn" onclick="window.location.href='index.html'">No</button>
+            <button id="yes-btn"  onclick="window.location.href='yes.html'">Yes</button>
+            <button id="no-btn">No</button>
         </div>
+    <script src="script.js"></script>
 </body>
 </html>
